# amsterdam-bike-fleet

./: .gitignore  AGENTS.md  AGENTS_15.md  AGENTS_18.md  MIGRATION_GUIDE.md  README.md  TAURI_SETUP.md  angular.json  obfuscator.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  webpack.config.js
.github/workflows/: build.yml
docs/: BACKUP_RECOVERY.md  BUILD_SUMMARY.md  CODE_PROTECTION_STRATEGY.md  INFRASTRUCTURE_DECISIONS.md  Infrastructure Decisions bckp.md  LICENSING.md  OBFUSCATION.md  ON_PREMISE_HA_SETUP.md  PERFORMANCE_OPTIMIZATIONS.md  POSTGRESQL_HA_DEPLOYMENT.md  WASM_SETUP.md  WEBPACK_CONFIG.md
docs/plans/: 2026-01-26-deliveries-issues-design.md  2026-01-27-rust-api-fjadra-force-graph.md
license-generator/: Cargo.toml
license-generator/src/: main.rs
scripts/: migrate-to-angular18.sh
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  database.rs  database_pg.rs  lib.rs  license.rs  main.rs  models.rs
src-tauri/src/commands/: database.rs  database_pg.rs  deliveries.rs  deliveries_pg.rs  fleet.rs  fleet_pg.rs  force_graph.rs  force_graph_pg.rs  health.rs  issues.rs  issues_pg.rs  license.rs  mod.rs  secure.rs
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
src/app/components/bike-list-item/: bike-list-item.component.html  bike-list-item.component.scss  bike-list-item.component.ts
src/app/components/bike-list-panel/: bike-list-panel.component.html  bike-list-panel.component.scss  bike-list-panel.component.ts
src/app/components/deliverer-graph-page/: deliverer-graph-page.component.html  deliverer-graph-page.component.scss  deliverer-graph-page.component.ts
src/app/components/deliveries-page/: deliveries-page.component.html  deliveries-page.component.scss  deliveries-page.component.ts
src/app/components/fleet-map/: fleet-map.component.html  fleet-map.component.scss  fleet-map.component.ts
src/app/components/force-graph/: force-graph.component.html  force-graph.component.scss  force-graph.component.ts
src/app/components/issues-page/: issues-page.component.html  issues-page.component.scss  issues-page.component.ts
src/app/components/legend/: legend.component.html  legend.component.scss  legend.component.ts
src/app/components/license-badge/: license-badge.component.html  license-badge.component.scss  license-badge.component.ts
src/app/components/license-banner/: license-banner.component.html  license-banner.component.scss  license-banner.component.ts
src/app/components/license-dialog/: license-dialog.component.html  license-dialog.component.scss  license-dialog.component.ts
src/app/components/nav-tabs/: nav-tabs.component.html  nav-tabs.component.scss  nav-tabs.component.ts
src/app/components/stats-panel/: stats-panel.component.html  stats-panel.component.scss  stats-panel.component.ts
src/app/guards/: license.guard.ts
src/app/interceptors/: mock-api.interceptor.ts
src/app/models/: fleet.models.ts
src/app/services/: delivery.service.ts  fleet-api.service.ts  issue.service.ts  license.service.ts  tauri.service.ts  wasm.service.ts
wasm-lib/: .gitignore  Cargo.toml
wasm-lib/src/: lib.rs
