[package]
name = "amsterdam-bike-fleet"
version = "0.1.0"
description = "Amsterdam Bike Fleet Management - Desktop Application"
authors = ["Amsterdam Bike Fleet Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "amsterdam_bike_fleet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

# License verification (Phase 1)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]
