[package]
name = "amsterdam-bike-fleet"
version = "0.1.0"
description = "Amsterdam Bike Fleet Management - Desktop Application"
authors = ["Amsterdam Bike Fleet Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "amsterdam_bike_fleet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

# License verification (Phase 1)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"

# Encrypted IPC (Phase 2)
# Why ChaCha20-Poly1305?
# - Fast on CPUs without AES hardware acceleration
# - AEAD (authenticated encryption) - integrity + confidentiality
# - Widely audited, used in TLS 1.3 and WireGuard
chacha20poly1305 = "0.10"

# Key derivation from license key
# Why HKDF?
# - Industry standard for deriving multiple keys from one secret
# - Used in TLS 1.3, Signal Protocol
# - Provides cryptographic separation between derived keys
hkdf = "0.12"
sha2 = "0.10"

# Binary serialization for IPC payloads
# Why bincode?
# - Compact binary format (smaller than JSON)
# - Fast serialization/deserialization
# - Harder to inspect than human-readable JSON
bincode = "1.3"

# Force-directed graph layout
# Why Fjädra?
# - Rust port of d3-force
# - Designed for wasm-bindgen compatibility
# - Runs natively in Tauri for maximum IP protection
fjadra = "0.1"

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]
